# paper_youtube_weight_stigma

./: .env.example  01_get_data_api.ipynb  02_basic_cleaning.ipynb  03_get_video_transcriptions.ipynb  04-get_video_comments_zero_shot.ipynb  05-get_video_transcription_zero_shot.ipynb  06-get_video_titles_zero_shot.ipynb  README.md  cleaning_utils.py  openai_api.py  pyproject.toml  schema.py  transcription_utils.py
