[project]
name = "youtube-weight-stigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "bertopic>=0.17.3",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fastparquet>=2024.11.0",
    "google-api-python-client>=2.177.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.1",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "node2vec>=0.5.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "plotly-express>=0.4.1",
    "python-dotenv>=1.1.1",
    "python-louvain>=0.16",
    "ruff>=0.12.4",
    "scipy>=1.16.0",
    "spacy>=3.8.7",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.2",
    "tqdm>=4.67.1",
    "transformers>=4.53.3",
    "umap-learn>=0.5.9.post2",
    "wordcloud>=1.9.4",
    "youtube-transcript-api>=1.2.1",
]
